namespace AvoidCrowds.Api.Geocoding;

public record StationSuggestion(string Id, string Name, double Lat, double Lon);
