namespace AvoidCrowds.Api.Journeys;

public record DirectTrain(string Origin, string Destination, DateTimeOffset DepartureTime, string TripId);
