namespace AvoidCrowds.Api.SoccerCrowdCheck;

public static class Leagues
{
    // OpenLigaDB's league shortcuts for Bundesliga 1 and 2.
    public static readonly IReadOnlyList<string> Bundesliga1And2 = ["bl1", "bl2"];
}
